moved all php files into uqDrawBackend and edited the moved files to match the new location

--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -55,7 +55,7 @@
 	<!-- JS -->
 	<script>
   		$(document).ready(function() {
-  		$("#start-username").load("registerLecturer.php");
+  		$("#start-username").load("/uqDrawBackend/registerLecturer.php");
   		 });
   	</script>
 </html>
