--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -44,7 +44,7 @@
 		<script>
   		 // DISRESPECT
   		 $(document).ready(function() {
-  		 	$("#subjects").load("lecturerSubjects.php");
+  		 	$("#subjects").load("uqDrawBackend/lecturerSubjects.php");
   		 });
 
 			function addCourse(){
