Linked index > student questions> drawing app

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	});
 
 	function getCourseItem(courseItem){ // add a <li> on the page// will be add a link after that page is finish
-		return	"<li> <span class='subject'>"+courseItem+"</span> </lI>";
+		return	"<a href='pages/student-questions.html'><li> <span class='subject'>"+courseItem+"</span> </lI></a>";
 	}
 
 
