--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -21,16 +21,16 @@
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> <span id="subject"> MATH 1061 </span>  CODE: <span>3FC</span> </h2>
 		<!-- List the Questions -->
-		<ul class="student-list">
+		<ul class="student-list" href="drawing-app.html">
 			<!-- Place PHP here, for each question in db, create a <li> element -->
-			<li> <span> Question Available! </span> 
+			<a href="drawing-app.html"><li> <span> Question Available! </span></li></a>
 		</ul>
 		</section>
 		<section class="student-responses">
 		<h2 class="type-body-heading"> <span> PREVIOUS RESPONSES </span> </h2>
 		<!-- Place PHP here, for each question in db, create a <li> element -->
-		<ul class="student-list">
-			<li> <span> Draw my house </span> </li>
+		<ul class="student-list" href="drawing-app.html">
+          <a href="drawing-app.html"><li> <span> Draw my house </span> </li></a>
 		</ul>
 	</section>
     
