--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -38,7 +38,8 @@
 	function getQuestionItem(questionItem){ // input the question Object from JSON array, output a HTML List Item
 		return "<li id='"+questionItem.questionID+"'> <label> Lecture "+questionItem.questionWeek
 		+" </label> <div>"+questionItem.title
-		+" <button class='button'> Ask </button> <button class='button'> View </button> </div> </li>"
+		+" <button class='button' onclick='window.location.href="
+		+'"http://teamone.uqcloud.net/pages/lecture-question.html?courseID='+getParameterByName("courseID")+'&questionID='+questionItem.questionID+'"'+"'> Ask </button> <button class='button'> View </button> </div> </li>"
 
 	}
 </script>
