after entering code it will redirect to a subject where students can attempt to answer the question through drawing app and changed the title of responses page

--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -18,7 +18,7 @@
 	<section>
 
 		<!-- Body Heading -->
-		<h2 class="type-body-heading"> Draw My House </h2>
+		<h2 class="type-body-heading"> Draw a House </h2>
 		<!-- Body Subheading - display number of responses-->
 		<h3 class="type-body-response"> 9 Responses Lecture 1 - Intro</h3>
 		
