--- a/pages/drawing-app2.html
+++ b/pages/drawing-app2.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/test.css">
     <title>UQDraw</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -142,38 +145,124 @@ body {
     </style>
 	<script type="text/javascript">
 	
-var ctx, color = "#000";	
+	var ctx;
+	var color = "#000";	
+	var red = "#C02323";
+	var green = "#329F24";
+	var blue = "#2360C0";
+	var white = "#FFFFFF";
+	var clickX = new Array();
+	var clickY = new Array();
+	var clickDrag = new Array();
+	var sizeA = new Array();
+	var colourA = new Array();
+
 $(document).ready(function () {
 	
 	// setup a new canvas for drawing wait for device init
     setTimeout(function(){
 	   newCanvas();
+	   ctx.lineWidth = 5;
+	   ctx.strokeStyle = green;	
     }, 1000);
-		
-	// reset palette selection (css) and select the clicked color for canvas strokeStyle
-	$(".palette").click(function(){
-		$(".palette").css("border-color", "#777");
-		$(".palette").css("border-style", "solid");
-		$(this).css("border-color", "#fff");
-		$(this).css("border-style", "dashed");
-		color = $(this).css("background-color");
+	
+	/* ADD ANY ICONS on clicks IN BELOW */
+
+	// ***** DEAFAULTS
+
+	// ***** COLOURS 
+
+	$("#app-green").click(function() {
+		removeColourClasses(this);
 		ctx.beginPath();
-		ctx.strokeStyle = color;
+		ctx.strokeStyle = green;
+		$(this).addClass('selected');
+	});
+	$("#app-red").click(function() {
+		removeColourClasses(this);
+		ctx.beginPath();
+		ctx.strokeStyle = red;
+	});
+	$("#app-blue").click(function() {
+		removeColourClasses(this);
+		ctx.beginPath();
+		ctx.strokeStyle = blue;
+	});
+
+	// ***** SIZE 
+	$("#app-thin").click(function() {
+		removeSizeClasses(this);
+		ctx.lineWidth = 3;	
+
+	});
+	$("#app-normal").click(function() {
+		removeSizeClasses(this);
+		ctx.lineWidth = 5;	
+
+	});
+	$("#app-thick").click(function() {
+		removeSizeClasses(this);
+		ctx.lineWidth = 10;	
+	});
+
+	// ***** ERASER 
+	$("#app-eraser").click(function() {
+		removeColourClasses(this);
+		ctx.beginPath();
+		ctx.strokeStyle = white;
 	});
     
 	// link the new button with newCanvas() function
-	$("#new").click(function() {
+	$("#clear").click(function() {
 		newCanvas();
 	});
 
 	$("#save").click(function() {
 		var canvas = document.getElementById("canvas");
-		var img = canvas.toDataURL("image/png");
-		console.log(img);
+		var data = canvas.toDataURL("image/png");
+		alert("saved");
+		
+		// Send to the server 
+		// Uncomment code and add a php user
+		/* $.ajax({
+		  type: "POST",
+		  url: "ADD_SOME_PHP_PAGE_HERE",
+		  data: { 
+		     imgBase64: data
+		  }
+		}).done(function(o) {
+		  console.log('saved successfully saved'); 
+		});
+		*/
+
 	});
 
 	
 });
+$( window ).resize(function() {
+	resize(ctx);
+	redraw(ctx);
+});
+
+function resize(context) {
+  context.canvas.width  = window.innerWidth;
+  context.canvas.height = window.innerHeight;
+}
+function removeColourClasses(selected) {
+	$("#app-eraser").removeClass('selected');
+	$("#app-green").removeClass('selected');
+	$("#app-red").removeClass('selected');
+	$("#app-blue").removeClass('selected');
+	$(selected).addClass('selected');
+}
+
+function removeSizeClasses(selected) {
+	$("#app-thin").removeClass('selected');
+	$("#app-normal").removeClass('selected');
+	$("#app-thick").removeClass('selected');
+	$(selected).addClass('selected');
+}
+
 // function to setup a new canvas for drawing
 function newCanvas(){
 	//define and resize canvas
@@ -184,13 +273,29 @@ function newCanvas(){
     // setup canvas
 	ctx=document.getElementById("canvas").getContext("2d");
 	ctx.strokeStyle = color;
-	ctx.lineWidth = 5;	
 	
 	// setup to trigger drawing on mouse or touch
 	$("#canvas").drawTouch();
     $("#canvas").drawPointer();
 	$("#canvas").drawMouse();
+
+	// clear the stored canvas image
+	clickX.length = 0;
+	clickY.length = 0;
+	clickDrag.length = 0;
+	sizeA.length = 0;
+	colourA.length = 0;
+	
 }
+// adds to the array 
+function addClick(color, thickness, x, y, dragging) {
+	colourA.push(color);
+	sizeA.push(thickness);
+	  clickX.push(x);
+	  clickY.push(y);
+	  clickDrag.push(dragging);
+};
+
 // prototype to	start drawing on touch using canvas moveTo and lineTo
 $.fn.drawTouch = function() {
 	var start = function(e) {
@@ -199,6 +304,8 @@ $.fn.drawTouch = function() {
 		x = e.changedTouches[0].pageX;
 		y = e.changedTouches[0].pageY-44;
 		ctx.moveTo(x,y);
+		addClick(ctx.strokeStyle, ctx.lineWidth, x, y);
+
 	};
 	var move = function(e) {
 		e.preventDefault();
@@ -207,6 +314,7 @@ $.fn.drawTouch = function() {
 		y = e.changedTouches[0].pageY-44;
 		ctx.lineTo(x,y);
 		ctx.stroke();
+		addClick(ctx.strokeStyle, ctx.lineWidth, x, y, true);
 	};
 	$(this).on("touchstart", start);
 	$(this).on("touchmove", move);	
@@ -220,6 +328,8 @@ $.fn.drawPointer = function() {
 		x = e.pageX;
 		y = e.pageY-44;
 		ctx.moveTo(x,y);
+		addClick(ctx.strokeStyle, ctx.lineWidth, x, y);
+
 	};
 	var move = function(e) {
 		e.preventDefault();
@@ -228,10 +338,13 @@ $.fn.drawPointer = function() {
 		y = e.pageY-44;
 		ctx.lineTo(x,y);
 		ctx.stroke();
+		addClick(ctx.strokeStyle, ctx.lineWidth, x, y, true);
+
     };
 	$(this).on("MSPointerDown", start);
 	$(this).on("MSPointerMove", move);
 };        
+
 // prototype to	start drawing on mouse using canvas moveTo and lineTo
 $.fn.drawMouse = function() {
 	var clicked = 0;
@@ -241,6 +354,7 @@ $.fn.drawMouse = function() {
 		x = e.pageX;
 		y = e.pageY-44;
 		ctx.moveTo(x,y);
+		addClick(ctx.strokeStyle, ctx.lineWidth, x, y);
 	};
 	var move = function(e) {
 		if(clicked){
@@ -248,6 +362,7 @@ $.fn.drawMouse = function() {
 			y = e.pageY-44;
 			ctx.lineTo(x,y);
 			ctx.stroke();
+			addClick(ctx.strokeStyle, ctx.lineWidth, x, y, true);
 		}
 	};
 	var stop = function(e) {
@@ -257,35 +372,62 @@ $.fn.drawMouse = function() {
 	$(this).on("mousemove", move);
 	$(window).on("mouseup", stop);
 };
-	</script>
+
+function redraw(context) {
+		// Drawing the line
+		for (var i = 0; i < clickX.length; i++) {
+				
+			context.beginPath();
+			context.strokeStyle = colourA[i];
+			context.lineWidth = sizeA[i];
+	
+			if (clickDrag[i] && i) {
+				context.moveTo(clickX[i - 1], clickY[i - 1]);
+			} else {
+				context.moveTo(clickX[i], clickY[i]);
+			}
+
+			context.lineTo(clickX[i], clickY[i]);
+			context.closePath();
+			context.stroke();
+		}
+	};
+
+</script>
+
+
 </head>
 <body>
 <div id="page">
-    <div class="header">
-		<a id="new" class="navbtn">New</a>
-        <div class="title">UQDraw</div>
-        <a id="save" class="navbtn2">Save</a>
+
+	<div id="headers-top-bar">
+      <img src="../assets/images/topbar-logo.png"></img>
     </div>
+
+    <!-- Back button -->
+    <button id="zoom" class="drawing-app-back">Back</button>
+
+    <!-- Submit button -->
+    <button id="save" class="drawing-app-submit">Submit</button>
+	
+	<!-- Question button -->
+    <button class="drawing-app-question">Question</button>
+
     <div id="content"><p style="text-align:center">Loading Canvas...</p></div>
-    <div class="footer">
-		<div class="palette-case">
-			<div class="palette-box">
-				<div class="palette white"></div>
-			</div>	
-			<div class="palette-box">
-				<div class="palette red"></div>
-			</div>
-			<div class="palette-box">
-				<div class="palette blue"></div>
-			</div>
-			<div class="palette-box">
-				<div class="palette green"></div>
-			</div>
-			<div class="palette-box">
-				<div class="palette black"></div>
-			</div>		
-			<div style="clear:both"></div>
+
+   	<!-- The -->
+    <div id="app-bar">
+    	<div class="center">
+			<div id="app-green" class="icon-select selected"><img src="../assets/images/icon-canvas-colour-green.svg"/> </div>
+			<div id="app-red" class="icon-select"><img src="../assets/images/icon-canvas-colour-red.svg"/> </div>
+			<div id="app-blue" class="icon-select"><img src="../assets/images/icon-canvas-colour-blue.svg"/> </div>
+			<div id="app-eraser" class="icon-select"><img src="../assets/images/icon-canvas-eraser.svg"/> </div>
+			<div id="app-thin" class="icon-select"><img class="size" src="../assets/images/icon-thin-line.svg"/> </div>
+			<div id="app-normal" class="icon-select selected"><img class="size" src="../assets/images/icon-normal-line.svg"/> </div>
+			<div id="app-thick" class="icon-select"><img class="size" src="../assets/images/icon-thick-line.svg"/></div>
 		</div>
+		<!-- Back button -->
+   		<button id="clear" class="drawing-app-back">clear page</button>
     </div>
 
     <div id="showimg"></div>
