Can upload drawing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	});
 
 	function getCourseItem(courseItem){ // add a <li> on the page// will be add a link after that page is finish
-		return	"<a href='pages/student-questions.html'><li> <span class='subject'>"+courseItem+"</span> </lI></a>";
+		return	"<a href='pages/student-questions.html?courseID='"+courseItem+"><li> <span class='subject'>"+courseItem+"</span> </lI></a>";
 	}
 
 
