Dodgy time animation

--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -120,8 +120,9 @@
 			<li> <span> Question 2: Draw a circle </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button></li>
 			<li> <span> Question 3: What is 1 + 0? </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button> </li>
 			<!-- Create new question button -->
+			</ul>
 				</span>
-			<ul id="addButton"><li onclick="addCourse()"><button class="button-add-subject">+</button></li></ul>
+			<ul id="addButton"><li onclick="addCourse()"><button class="button-add">+</button></li></ul>
 		</ul>
 	</section>
 
