--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -32,7 +32,7 @@
 			<li> <span> Subject 3 </span> </li>
 			<!-- Create new Subject button -->
 		</ul>
-		<ul id="addButton"><li onclick="addCourse()"><button class="button-add-subject">+</button></li></ul>
+		<ul id="addButton"><li onclick="addCourse()"><button class="button-add">+</button></li></ul>
 		<span id="addSubject"></span>
 
 	</section>
