--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -29,9 +29,14 @@
 		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
 		theme-response-inner and change the width accordinly -->
-		<div class="theme-response-holder">
-			<div class="theme-response-inner"> </div>
+		<div class="timer-div">
+			
+			<div class="theme-timer"> </div>
+			
 		</div>
+		<div class="theme-time3"><p> 3 minutes</p></div>
+		<div class="theme-time2"><p>2 minutes</p> </div>
+		<div class="theme-time1"><p>1 minute</p> </div>
 		
 		<div class="theme-response-actions">
 			<!-- Enter PHP values in the spans -->
