--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -8,10 +8,10 @@
 <body>
 
 	<section>
-		<div class="header-l-prepare">
+		<div class="header-l-lecture">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Prepare Mode </h3>
-			<a href="lecture-questions.html"><div class="button-goto-lecture"> <p> Lecture Mode </p></div></a>
+			<h3 class="typography-l-h3"> Lecture Mode </h3>
+			<a href="lecture-questions.html"><div class="button-goto-prepare"> <p> Back </p></div></a>
 		</div>
 	</section>
 
