Time animation is not dodgy anymore

--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -34,9 +34,10 @@
 			<div class="theme-timer"> </div>
 			
 		</div>
-		<div class="theme-time3"><p> 3 minutes</p></div>
 		<div class="theme-time2"><p>2 minutes</p> </div>
+		<div class="theme-time15"><p>1.5 minutes</p> </div>
 		<div class="theme-time1"><p>1 minute</p> </div>
+		<div class="theme-time05"><p>30 seconds</p> </div>
 		
 		<div class="theme-response-actions">
 			<!-- Enter PHP values in the spans -->
