--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -177,7 +177,8 @@
 			<li> <span> Question 3: What is 1 + 0? </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button> </li>
 			<!-- Create new question button -->
 			</span>
-			<ul id="addButton"><li onclick="addQuestion()"><button class="button-add-subject">+</button></li></ul>
+		</ul>
+			<ul id="addButton"><li onclick="addQuestion()"><button class="button-add">+</button></li></ul>
 		</ul>
 	</section>
 
