updated prepare/lecture mode responses page

--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -11,7 +11,7 @@
 		<div class="header-l-prepare">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Prepare Mode </h3>
-			<a href="lecture-questions.html"><div class="button-goto-lecture"> <p> Lecture Mode </p></div></a>
+			<a href="lecture-responses.html"><div class="button-goto-prepare"> <p> Back </p></div></a>
 		</div>
 	</section>
 
