--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -11,7 +11,7 @@
 		<div class="header-l-lecture">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<a href="lecture-questions.html"><div class="button-goto-prepare"> <p> Back </p></div></a>
+			<a href="lecture-prepare-responses.html"><div class="button-goto-lecture"> <p> Back </p></div></a>
 		</div>
 	</section>
 
@@ -20,63 +20,29 @@
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Draw a House </h2>
 		<!-- Body Subheading - display number of responses-->
-		<h3 class="type-body-response"> 9 Responses Lecture 1 - Intro</h3>
+		<h3 class="type-body-response"> 2 Correct Responses Lecture 1 - Intro</h3>
 		
 		<div class="grid-container">
 
 			<!--example buttons-->
-			<div class="grid-response">
+			<div class="grid-response" id="response1">
 				<img class="single-response" src="..\assets\images\response-1.jpg" height="110px" width="110px" >
 				<a href="..\assets\images\response-1.jpg" data-lightbox="responses" data-title="First Response" >
 					<button type="button" class="button-hidden">Expand</button>
 				</a>
-				<button type="button" class="button-hidden" onclick="confirmDelete()">Delete</button>
+				<div id="mark0">
+					
+				</div>
 			</div>
 
-			<div class="grid-response">
+			<div class="grid-response" id="response2">
 				<img class="single-response" src="..\assets\images\response-2.jpg" height="110px" width="110px" >
 				<a href="..\assets\images\response-2.jpg" data-lightbox="responses" data-title="Second Response" >
 					<button type="button" class="button-hidden">Expand</button>
 				</a>
-				<button type="button" class="button-hidden">Delete</button>
-			</div>
+				<div id="mark1">
+				</div>
 
-			<div class="grid-response">
-				<img class="single-response" src="..\assets\images\response-3.jpg" height="110px" width="110px" >
-				<a href="..\assets\images\response-3.jpg" data-lightbox="responses" data-title="Third Response" >
-					<button type="button" class="button-hidden">Expand</button>
-				</a>
-				<button type="button" class="button-hidden">Delete</button>
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>		
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>	
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>		
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>		
-			</div>
-
-			<div class="grid-response">
-				<button type="button" class="button-hidden">Expand</button>
-				<button type="button" class="button-hidden">Delete</button>	
 			</div>
 		</div>
 
@@ -85,7 +51,7 @@
 </body>
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="../js/lightbox.min.js"></script>
+	<script src="../js/lightbox-lecture.js"></script>
 	<script src="../js/responses_page.js"></script>
 	<!-- JS -->
 	<script>
