Pages will be through single sign on userID's rather than a static test userID. Fixed file locations of some pages

--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -37,7 +37,7 @@
   		 // DISRESPECT
  
   		 $(document).ready(function() {
-  		 	$("#subjects").load("uqDrawBackend/subListForALecturer.php");
+  		 	$("#subjects").load("../uqDrawBackend/subListForALecturer.php");
   		 });
   	</script>
 </html>
