--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -10,7 +10,7 @@
 	<section>
 		<div class='header-l-prepare'>
 			<!-- Logo (small) -->
-			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
+			<a href="http:"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
 			<!-- Title of the page -->
 			<h3 class='type-title'> Prepare Mode </h3>
 			<!-- Switch button -->
@@ -48,25 +48,24 @@
   		 });
 
 			function addCourse(){
-				alert("add COurse");
-				document.getElementById("addButton").innerHTML ="";
+				alert("Add Course");
 				document.getElementById("addButton").innerHTML ="<li><form id ='addSubjectForm' class='subject-form'><span>Course Code:<input style='width:30%;'type='text' name='courseID' maxlength='8'>" +
 						"Year: <input style='width:10%;'  type='number' name='year' maxlength='2' value ='"+getCurrentYear()
-						+"'>Semester: <input style='width:10%;' type='number' name='year'maxlength='1' value ='"+getCurrentSem()+"'><button onclick='submitCourse()'>Add</button></span></form></li>";
+						+"'>Semester: <input style='width:10%;' type='number' name='semester'maxlength='1' value ='"+getCurrentSem()+"'><button onclick='submitCourse()'>Add</button></span></form></li>";
 			}
 		 function submitCourse(){//get data from the form
-
+			alert("submit course");
 			 var courseCode = document.getElementsByName("courseID")[0].value;
 			 var year = document.getElementsByName("year")[0].value;
 			 var sem = document.getElementsByName("semester")[0].value;
 			 var postCourseCode = "";
-			 if(courseCode==null||year==null||sem==null){
-				 alert("Type something dude");}
-
+			 if(courseCode==""||year==""||sem==""){
+				 alert("Type something dude");
+				}
 			 else{
 				 postCourseCode=postCourseCode.concat(courseCode,"-",year,"_",sem);
 				 alert(postCourseCode);
-				 var url = "http://teamone.uqcloud.net/Brian/uqDrawBackend/addCourse.php?courseID="+postCourseCode;
+				 var url = "../uqDrawBackend/addCourse.php?courseID="+postCourseCode;
 				 var data ="";
 				 $.post(url,data,function(data, status){
 					 alert("Data: " + data + "\nStatus: " + status);
