--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -49,7 +49,7 @@
 		<div class="header-l-lecture">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
+			<a href="lecture-makequestions.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
 		</div>
 	</section>
 
