Fixed img colours

--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -64,7 +64,7 @@
 				<div> 
 					Draw my House 
 					<button class="button"> Ask </button>
-					<button class="button"> View </button>
+					<button class="button"> Responses</button>
 				</div>
 
 			</li>
@@ -74,7 +74,7 @@
 				<div> 
 					Draw my House 
 					<button class="button"> Ask </button>
-					<button class="button"> View </button>
+					<button class="button"> Responses </button>
 				</div>
 			</li>
 
@@ -83,7 +83,7 @@
 				<div> 
 					Draw my House 
 					<button class="button"> Ask </button>
-					<button class="button"> View </button>
+					<button class="button"> Responses </button>
 				</div>
 			</li>
 
