button width to percentage

--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -26,8 +26,8 @@
 
 			<!--example buttons-->
 			<div class="grid-response" id="response1">
-				<img class="single-response" src="..\assets\images\response-1.jpg" height="110px" width="110px" >
-				<a href="..\assets\images\response-1.jpg" data-lightbox="responses" data-title="First Response" >
+				<img class="single-response" src="..\assets\images\response-1.png" height="110px" width="110px" >
+				<a href="..\assets\images\response-1.png" data-lightbox="responses" data-title="First Response" >
 					<button type="button" class="button-hidden">Expand</button>
 				</a>
 				<div id="mark0">
