--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -25,9 +25,9 @@
 		<div class="grid-container">
 
 			<!--example buttons-->
-			<div class="grid-response" id="response1">
-				<img class="single-response" src="..\assets\images\response-1.jpg" height="110px" width="110px" >
-				<a href="..\assets\images\response-1.jpg" data-lightbox="responses" data-title="First Response" >
+			<div class="grid-response">
+				<img class="single-response" src="..\assets\images\response-1.png" height="110px" width="110px" >
+				<a href="..\assets\images\response-1.png" data-lightbox="responses" data-title="First Response" >
 					<button type="button" class="button-hidden">Expand</button>
 				</a>
 				<button type="button" class="button-hidden" onclick="confirmDelete()">Delete</button>
