--- a/pages/drawing-app3.html
+++ b/pages/drawing-app3.html
@@ -21,8 +21,11 @@
 
 		<!-- Header Bar -->
 		<div id="headers-top-bar">
-
+			<img src="../assets/images/topbar-logo.png"></img>
 	    </div>
+
+		    <!-- Back button -->
+    <button class="drawing-app-back">Back</button>
 
 	    <!-- Initial Loader -->
 	    <div id="content">
