--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-<body>
+<body class="bg-prepare">
 	<!-- Header -->
 	<section>
 		<div class="header-startpage">
