--- a/pages/student-correctanswers.html
+++ b/pages/student-correctanswers.html
@@ -8,15 +8,15 @@
 <body>
 
 	<section>
-		<div class="header-l-lecture">
-			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Correct Answers</h3>
-			<a href="lecture-prepare-responses.html"><div class="button-goto-lecture"> <p> Back </p></div></a>
-		</div>
+		<div id="headers-top-bar">
+			<img src="../assets/images/topbar-logo.png"></img>
+	    </div>
 	</section>
 
 	<section>
 
+	    <!-- Back button -->
+    <button class="drawing-app-back">Back</button>
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Draw a House </h2>
 		<!-- Body Subheading - display number of responses-->
