--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -43,9 +43,9 @@
 			<h2> Time: <span id="time-left"> 30 seconds </span></h2>
 
 			<!-- Buttons -->
-			<button onclick="window.location.href='http://teamone.uqcloud.net/pages/lecture-responses.html'">View Responses</button>
-			<button>End</button>
-			<button>Next</button>
+			<button class="q-button-long" onclick="window.location.href='http://teamone.uqcloud.net/pages/lecture-responses.html'">View Responses</button>
+			<button class="q-button">End</button>
+			<button class="q-button">Next</button>
 		</div>
 	</section>
 
