--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -47,10 +47,12 @@
 
 	<section>
 		<div class="header-l-lecture">
+		<div class="headerpos">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
+			</div>
 			<a href="lecture-makequestions.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
-			<a href="../pages/lecture-subjects.html"><div class="button-goto-prepare"> <p> Back</p></div></a>
+			<a href="../pages/lecture-subjects.html"><div class="button-back-lecture"> <p> Back</p></div></a>
 		</div>
 	</section>
 
