--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -9,9 +9,12 @@
 
 	<section>
 		<div class="header-l-lecture">
+			<div class="headerpos">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> Prepare Mode </p></div></a>
+			</div>
+			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
+			<a href="lecture-mode.html"><div class="button-back-lecture"> <p> Back </p></div></a>
 		</div>
 	</section>
 
