--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -9,12 +9,16 @@
 	<!-- Header -->
 	<section>
 		<div class='header-l-prepare'>
+		<div class="headerpos">
 			<!-- Logo (small) -->
-			<a href="http:"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
+			<img class='images-l-subjects' src='../assets/images/topbar-logo.png' />
 			<!-- Title of the page -->
 			<h3 class='type-title'> Prepare Mode </h3>
+			</div>
 			<!-- Switch button -->
-			<a href='lecture-subjects.html'><div class='button-goto-lecture'> <p> Lecture Mode </p></div></a>
+			<a href='lecture-subjects.html'><div class='button-goto-lecture'> <p> goto Lecture Mode </p></div></a>
+			<!-- Switch button -->
+			<a href='lecture-mode.html'><div class='button-back-prepare'> <p> Back </p></div></a>
 		</div>
 	</section>
 
