finishing touches on drawing app

--- a/pages/drawing-app3.html
+++ b/pages/drawing-app3.html
@@ -34,6 +34,10 @@
 	    	<button id="submit"> Submit </button>
 
 	    </div>
+	    <div id="question-container" class="closed">
+	    	<h1>Question:</h1>
+	    	<h2>QUESTION GOES HERE</h2>
+	    </div>
 
 	    <!-- Initial Loader -->
 	    <div id="content">
