adding viewport to html and fixing gridism css link

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -6,7 +6,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/vendor/font-awesome.min.css">
 
    	<!-- JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
