--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -2,7 +2,10 @@
 <head>
   <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/gridism.css">
+  <link rel="stylesheet" href="../css/vendor/gridism.css">
+  <!-- Sets it as a mobile viewport if the user is on a mobile device -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
 </head>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">	</script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js "></script>
