--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -5,8 +5,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/test.css">
-
+    <!-- Sets it as a mobile viewport if the user is on a mobile device -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
 
