--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -2,7 +2,9 @@
 <head>
   <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/gridism.css">
+  <link rel="stylesheet" href="../css/vendor/gridism.css">
+  <!-- Sets it as a mobile viewport if the user is on a mobile device -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
