--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -64,30 +64,27 @@
 
 		<ul><span id="questionsList">
 			<li>
-				<label> Lecture 1 </label>
-				<div> 
-					Draw my House 
+				<div class="question-container"> 
+					<div class="question">
+					Draw my House Draw asaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaa
+					</div> 
+					<div class="question-button">
 					<button class="button"> Ask </button>
 					<button class="button"> Responses</button>
+					</div>
 				</div>
 
 			</li>
 
 			<li>
-				<label> Lecture 2 </label>
-				<div> 
+				<div class="question-container"> 
+					<div class="question">
 					Draw my House 
+					</div>
+					<div class="question-button">
 					<button class="button"> Ask </button>
 					<button class="button"> Responses </button>
-				</div>
-			</li>
-
-			<li>
-				<label> Lecture 3 </label>
-				<div> 
-					Draw my House 
-					<button class="button"> Ask </button>
-					<button class="button"> Responses </button>
+					<div class="question">
 				</div>
 			</li>
 
