index mobile fix attempt

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 	<!-- Header -->
 	<section>
 		<div class="header-startpage">
-			<!-- UQDraw Logo large -->
-			<img class='student-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
-			<h3> Welcome <span id="start-username"></span> </h3>
+			<img class='lecturer-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
+			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span id="start-username"></span></h3>
 		</div>
 	</section>
 
