changed list style in makequestion page

--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -179,10 +179,45 @@
 		<!-- List the Questions -->
 		<ul class="list-make-green">
 			<span id="questionsList">
+			<label>Lecture 1</label>
 			<!-- Place PHP here, for each question in db, create a <li> element -->
-			<li> <span> Question 1: Draw a house </span> <button class="q-button">Delete</button> <button class="q-button-long">View Responses</button> <button class="q-button">Edit</button> </li>
-			<li> <span> Question 2: Draw a circle </span> <button class="q-button">Delete</button> <button class="q-button-long">View Responses</button> <button class="q-button">Edit</button></li>
-			<li> <span> Question 3: What is 1 + 0? </span> <button class="q-button">Delete</button> <button class="q-button-long">View Responses</button> <button class="q-button">Edit</button> </li>
+			<li> 
+				<div class="question-container">
+				<div class="question">
+					Question 1: Draw a house aaaaaaaaa aaaaaaa aaaaaa aaaaa aaa aaaaaa 
+				</div>
+				<div class="question-button">
+					<button class="make-button">Delete</button>
+					<button class="make-button-long">View Responses</button>
+					<button class="make-button">Edit</button> 
+				</div>
+			</li>
+
+			<li> 
+				<div class="question-container">
+				<div class="question">
+					Question 2: Draw a house aaaaaaaaa aaaaaaa aaaaaa aaaaa aaa aaaaaa 
+				</div>
+				<div class="question-button">
+					<button class="make-button">Delete</button>
+					<button class="make-button-long">View Responses</button>
+					<button class="make-button">Edit</button> 
+				</div>
+			</li>
+
+			<li> 
+				<div class="question-container">
+				<div class="question">
+					Question 3: Draw a house a
+				</div>
+				<div class="question-button">
+					<button class="make-button">Delete</button>
+					<button class="make-button-long">View Responses</button>
+					<button class="make-button">Edit</button> 
+				</div>
+			</li>
+
+			
 			<!-- Create new question button -->
 			</span>
 		</ul>
