--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -64,6 +64,7 @@
 
 		<ul><span id="questionsList">
 			<li>
+				<label> Lecture 1</label>
 				<div class="question-container"> 
 					<div class="question">
 					Draw my House Draw asaaaa aaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaa
@@ -77,6 +78,7 @@
 			</li>
 
 			<li>
+				<label>Lecture 2</label>
 				<div class="question-container"> 
 					<div class="question">
 					Draw my House 
